Closed Bug 1925165 Opened 9 days ago Closed 8 days ago

Perma Bp-clang-trunk /builds/worker/checkouts/gecko/editor/libeditor/WSRunObject.h:297:19: error: a template argument list is expected after a name prefixed by the template keyword [-Wmissing-template-arg-list-after-template-kw]

Categories

(Core :: DOM: Editor, defect, P5)

defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox131 --- unaffected
firefox132 --- unaffected
firefox133 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: masayuki)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=478643749&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Vh1k9w1USk6060Lt7NCI7g/runs/0/artifacts/public/logs/live_backing.log


[task 2024-10-17T03:12:44.510Z] 03:12:44     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/2d'
[task 2024-10-17T03:12:45.956Z] 03:12:45     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/editor/libeditor'
[task 2024-10-17T03:12:45.960Z] 03:12:45     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o Unified_cpp_editor_libeditor0.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -fstrict-flex-arrays=1 -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DMOZ_SUPPORT_LEAKCHECKING -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/editor/libeditor -I/builds/worker/workspace/obj-build/editor/libeditor -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/extensions/spellcheck/src -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-rtti -pthread -fno-sized-deallocation -fno-aligned-new -ffunction-sections -fdata-sections -fno-math-errno -fno-exceptions -fPIC -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_editor_libeditor0.o.pp   Unified_cpp_editor_libeditor0.cpp
[task 2024-10-17T03:12:45.960Z] 03:12:45     INFO -  In file included from Unified_cpp_editor_libeditor0.cpp:2:
[task 2024-10-17T03:12:45.960Z] 03:12:45     INFO -  In file included from /builds/worker/checkouts/gecko/editor/libeditor/AutoRangeArray.cpp:14:
[task 2024-10-17T03:12:45.961Z] 03:12:45    ERROR -  /builds/worker/checkouts/gecko/editor/libeditor/WSRunObject.h:297:19: error: a template argument list is expected after a name prefixed by the template keyword [-Wmissing-template-arg-list-after-template-kw]
[task 2024-10-17T03:12:45.961Z] 03:12:45     INFO -    297 |         .template NextPointOrAfterContainer();
[task 2024-10-17T03:12:45.962Z] 03:12:45     INFO -        |                   ^
[task 2024-10-17T03:12:45.962Z] 03:12:45     INFO -  1 error generated.
[task 2024-10-17T03:12:45.962Z] 03:12:45    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:675: Unified_cpp_editor_libeditor0.o] Error 1
[task 2024-10-17T03:12:45.963Z] 03:12:45     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/editor/libeditor'
[task 2024-10-17T03:12:45.963Z] 03:12:45     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/editor/libeditor'
[task 2024-10-17T03:12:45.963Z] 03:12:45     INFO -  editor/libeditor/Unified_cpp_editor_libeditor3.o
[task 2024-10-17T03:12:45.964Z] 03:12:45     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/editor/libeditor'
[task 2024-10-17T03:12:46.285Z] 03:12:46     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/editor/libeditor'
[task 2024-10-17T03:12:46.288Z] 03:12:46     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o Unified_cpp_editor_libeditor2.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -fstrict-flex-arrays=1 -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DMOZ_SUPPORT_LEAKCHECKING -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/editor/libeditor -I/builds/worker/workspace/obj-build/editor/libeditor -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/extensions/spellcheck/src -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-rtti -pthread -fno-sized-deallocation -fno-aligned-new -ffunction-sections -fdata-sections -fno-math-errno -fno-exceptions -fPIC -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_editor_libeditor2.o.pp   Unified_cpp_editor_libeditor2.cpp
[task 2024-10-17T03:12:46.289Z] 03:12:46     INFO -  In file included from Unified_cpp_editor_libeditor2.cpp:11:
[task 2024-10-17T03:12:46.289Z] 03:12:46     INFO -  In file included from /builds/worker/checkouts/gecko/editor/libeditor/HTMLStyleEditor.cpp:19:
[task 2024-10-17T03:12:46.289Z] 03:12:46    ERROR -  /builds/worker/checkouts/gecko/editor/libeditor/WSRunObject.h:297:19: error: a template argument list is expected after a name prefixed by the template keyword [-Wmissing-template-arg-list-after-template-kw]
[task 2024-10-17T03:12:46.289Z] 03:12:46     INFO -    297 |         .template NextPointOrAfterContainer();
[task 2024-10-17T03:12:46.290Z] 03:12:46     INFO -        |                   ^
[task 2024-10-17T03:12:46.290Z] 03:12:46     INFO -  1 error generated.
[task 2024-10-17T03:12:46.290Z] 03:12:46    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:676: Unified_cpp_editor_libeditor2.o] Error 1

Set release status flags based on info from the regressing bug 1923251

:masayuki, since you are the author of the regressor, bug 1923251, could you take a look?

For more information, please visit BugBot documentation.

Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Flags: needinfo?(masayuki)

Hmm, I don't understand why it requires the explicit template argument because its default type is same as the instance type...

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/93472eb73160 Make `WSScanResult::PointAfterReachedContent` set the template argument explicitly r=glandium
Status: ASSIGNED → RESOLVED
Closed: 8 days ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: