Bug 1925165 - Make `WSScanResult::PointAfterReachedContent` set the template argument explicitly r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D225930